--- a/styles/global.css
+++ b/styles/global.css
@@ -2,6 +2,8 @@
 *::before,
 *::after {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 body {
@@ -29,8 +31,7 @@ a {
   color: inherit;
 }
 
-img {
-  width: 100%;
+e
 }
 
 button {
