--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,8 @@
 html {
-background-color: #f0f0f0;
-
+  background-color: #343333;
 }
 body {
   background-color: rgb(255, 255, 255);
-
 }
 /*-----------------HEAD ----------*/
 .header {
@@ -18,24 +16,27 @@ body {
   display: flex;
   gap: 14px;
   list-style-type: none;
- 
+
   font-size: 18px;
   font-weight: 400;
-  font-family: "Raleway" sans-serif;
+  font-family: "Raleway", Arial, sans-serif;
   line-height: 1;
   font-size: normal;
-
 }
-.list-marker {margin-bottom: 2.5px;}
-.nav__item-none a {text-decoration: none;}
+.list-marker {
+  margin-bottom: 2.5px;
+}
+.nav__item-none a {
+  text-decoration: none;
+}
 .nav__item a {
   text-decoration: underline;
   text-underline-offset: 4px;
 }
 .logo img {
-    display: block;
-    width: 138px;
-    height: 107px;
+  display: block;
+  width: 138px;
+  height: 107px;
 }
 
 .address {
@@ -47,79 +48,68 @@ body {
   flex-direction: column;
   align-items: flex-start;
   font: 400 18px/1.3 "Raleway", sans-serif;
-
 }
 
 .contact {
-text-decoration: underline;
-text-underline-offset: 4px;
+  text-decoration: underline;
+  text-underline-offset: 4px;
 }
 .address a {
   color: black;
 }
 
-
 /* ------------------------MAIN ------------*/
-.cover {  
- 
+.cover {
   padding: 165px 50px 50px 50px;
-    position: relative;
-    min-height: 757px;
-    background: url("/images/cover.jpg") center/cover no-repeat; 
-    color: white;
-    display: flex;
-    flex-direction: column;
-  }
-
+  position: relative;
+  min-height: 757px;
+  background: url("/images/cover.jpg") center/cover no-repeat;
+  color: white;
+  display: flex;
+  flex-direction: column;
+}
 
 .overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); 
-    z-index: 0;
-    }
-  
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 0;
+}
+
 .over--title {
   width: 1030px;
-    z-index: 1;
-    font-size: 100px;
-    font-weight: 700;
-    line-height: 115%;
-    letter-spacing: 30%;
-    text-transform: uppercase;
-  /*  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8); */
+  z-index: 1;
+  font-size: 100px;
+  font-weight: 700;
+  line-height: 115%;
+  letter-spacing: 30%;
+  text-transform: uppercase;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8); 
   display: flex;
-	flex-direction: column;
-	
-
-	 /* align-content: center; */
+  flex-direction: column;
   gap: 20px;
-
-  }
+}
 
 .description {
-        margin-top: auto;
-        display: flex;
-        justify-content: space-between;
+  margin-top: auto;
+  display: flex;
+  justify-content: space-between;
 
-      z-index: 1;
-      }
+  z-index: 1;
+}
 .overlay--text1 {
-
   align-self: start;
 }
 
 .overlay--text2 {
- 
   align-self: center;
 }
 .overlay--text3 {
   margin-left: 0px;
-  
-  
+
   align-self: flex-end;
 }
 
@@ -127,13 +117,11 @@ text-underline-offset: 4px;
   font-size: 22px;
   margin-top: 11px;
   font-weight: 400;
-  font-family: "Raleway" sans-serif;
+  font-family: "Raleway", Arial, sans-serif;
   line-height: 28px;
   text-transform: uppercase;
   word-spacing: 19px;
 }
-
-
 
 .button {
   border: 1px solid white;
@@ -147,31 +135,22 @@ text-underline-offset: 4px;
 }
 
 
-
-
-
-
-
-
-    /*---------------LOTS------------------------------------*/
-
+/*---------------LOTS------------------------------------*/
 
 .lots {
   margin: 0 auto;
   margin-top: 180px;
   width: 1052px;
   min-height: 723px;
-
-  }
-  .lots__heading {
-    margin-left: 40px;
-    margin-bottom: 27px;
-    font-size: 40px;
-    font-weight: 700;
-    font-family: 'Raleway' sans-serif;
-    text-transform: uppercase;
-
-  }
+}
+.lots__heading {
+  margin-left: 40px;
+  margin-bottom: 27px;
+  font-size: 40px;
+  font-weight: 700;
+  font-family: "Raleway", Arial, sans-serif;
+  text-transform: uppercase;
+}
 .lot {
   display: flex;
   flex-direction: column;
@@ -181,28 +160,26 @@ text-underline-offset: 4px;
   padding: 48px 40px;
   box-shadow: 0 4px 16px rgba(0, 0, 0, 1.4);
   border: 1px solid #000000;
-   overflow: hidden;
+  overflow: hidden;
 }
 .lot::before {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.5);
-  
+
   pointer-events: none;
   z-index: 1;
 }
 
 .lot1 {
-  background: url(/images/card-lot-01.jpg) no-repeat center / cover;;
-  
+  background: url(/images/card-lot-01.jpg) no-repeat center / cover;
 }
-.lot2{
+.lot2 {
   background: url(/images/card-lot-02.jpg) no-repeat center / cover;
-
 }
 .lot3 {
   background: url(/images/card-lot-03.jpg) no-repeat center / cover;
@@ -217,32 +194,94 @@ text-underline-offset: 4px;
   font-size: 22px;
   font-weight: 700;
   line-height: 1.2;
-  font-family: "Raleway" sans-serif;
+  font-family: "Raleway", Arial, sans-serif;
 
   text-transform: uppercase;
   text-decoration: underline;
   color: white;
-  
-
 }
 .card__text {
   z-index: 2;
   font-size: 20px;
   font-weight: 400;
-  font-family: "Raleway" sans-serif;
+  font-family: "Raleway", Arial, sans-serif;
   line-height: 1.2;
   margin-top: auto;
-  color:floralwhite;
+  color: floralwhite;
 }
 .lots__look-more-link {
   position: relative;
   font-size: 20px;
-  font-family: "Raleway" sans-serif;
+  font-family: "Raleway", Arial, sans-serif;
   font-weight: 400;
   line-height: 1;
   margin-left: 40px;
   top: 30px;
   text-decoration: underline;
-  
+
   text-underline-offset: 6px;
+}
+
+
+
+/*---------------About------------------------------------*/
+.about {
+ /* padding: 24px; */
+  margin: 120px auto;
+  
+  width: 1052px;
+  min-height: 595px;
+  
+}
+
+.about__logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 240px;
+  height: 240px;
+  background-color: black;
+  border-radius: 50%;
+  margin-left: 47px;
+  margin-top: 35px;
+}
+
+.about__logo-image {
+  width: 148px;
+  height: 114px;
+}
+
+.about__column {
+  display: grid;
+  grid-template-columns: 334px 694px;
+  grid-template-rows: 595px;
+}
+
+.first__column {
+ 
+  grid-area: 1 / 1 / 2 / 2;
+}
+
+.second__column {
+  align-self: end;
+  
+  grid-area: 1 / 2 / 2 / 4;
+}
+.about__title {
+  font-size: 40px;
+  font-weight: 700;
+  font-family: "Raleway", Arial, sans-serif;
+  line-height: 100%;
+  text-transform: uppercase;
+  margin: 136px 0 100px 0;
+}
+
+.about__text {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  font-size: 20px;
+  font-weight: 400;
+  font-family: "Raleway", Arial, sans-serif;
+  line-height: 24px;
 }
