--- a/styles/style.css
+++ b/styles/style.css
@@ -6,8 +6,8 @@ body {
 }
 /*-----------------HEAD ----------*/
 .header {
-  height: 293px;
-  padding: 91px 50px 96px 50px;
+  min-height: 293px;
+  padding: 91px 50px 95px 50px;
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
   align-items: center;
@@ -24,7 +24,7 @@ body {
   font-size: normal;
 }
 .list-marker {
-  margin-bottom: 2.5px;
+  margin-top: 3px;
 }
 .nav__item-none a {
   text-decoration: none;
@@ -33,7 +33,7 @@ body {
   text-decoration: underline;
   text-underline-offset: 4px;
 }
-.logo img {
+.head__logo-image {
   display: block;
   width: 138px;
   height: 107px;
@@ -87,7 +87,7 @@ body {
   line-height: 115%;
   letter-spacing: 30%;
   text-transform: uppercase;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8); 
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -134,7 +134,6 @@ body {
   background: transparent;
 }
 
-
 /*---------------LOTS------------------------------------*/
 
 .lots {
@@ -159,7 +158,7 @@ body {
   min-height: 596px;
   padding: 48px 40px;
   box-shadow: 0 4px 16px rgba(0, 0, 0, 1.4);
-  border: 1px solid #000000;
+  /* border: 1px solid #000000;*/
   overflow: hidden;
 }
 .lot::before {
@@ -216,22 +215,19 @@ body {
   font-weight: 400;
   line-height: 1;
   margin-left: 40px;
-  top: 30px;
+  top: 32px;
   text-decoration: underline;
 
-  text-underline-offset: 6px;
+  text-underline-offset: 5px;
 }
-
-
 
 /*---------------About------------------------------------*/
 .about {
- /* padding: 24px; */
+  /* padding: 24px; */
   margin: 120px auto;
-  
+
   width: 1052px;
   min-height: 595px;
-  
 }
 
 .about__logo {
@@ -258,13 +254,12 @@ body {
 }
 
 .first__column {
- 
   grid-area: 1 / 1 / 2 / 2;
 }
 
 .second__column {
   align-self: end;
-  
+
   grid-area: 1 / 2 / 2 / 4;
 }
 .about__title {
@@ -284,4 +279,10 @@ body {
   font-weight: 400;
   font-family: "Raleway", Arial, sans-serif;
   line-height: 24px;
+}
+
+/*================FOOTER==================*/
+.footer {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
 }
