--- a/styles/style.css
+++ b/styles/style.css
@@ -100,13 +100,13 @@ body {
   gap: 20px;
 }
 
-.overlay--text1 {
+.overlay__text-start {
   align-self: start;
 }
-.overlay--text2 {
+.overlay__text-center {
   align-self: center;
 }
-.overlay--text3 {
+.overlay__text-end {
   align-self: flex-end;
 }
 
@@ -122,8 +122,6 @@ body {
   line-height: 1.3;
   text-transform: uppercase;
   word-spacing: 19px;
- 
-  
 }
 
 .button {
@@ -140,7 +138,7 @@ body {
 
 .lots {
   margin: 0 auto;
-  margin-top: 180px;
+  margin-top: 179px;
   width: 1052px;
   
 }
@@ -180,8 +178,6 @@ body {
   z-index: 2;
   font: var(--font-large);
   font-weight: 700;
-  
-
   text-transform: uppercase;
   text-decoration: underline;
   text-underline-offset: 1px;
@@ -193,18 +189,20 @@ body {
   margin-top: auto;
   color: white;
 }
-.lots__look-more-link {
-  padding-top: 20px;
+.lots__look-more {
   font: var(--font-normalot);
   margin-left: 40px;
-  /* ВОД ТУТ ЗАХУЯЧИТЬ ПАДДИНГИ */
-  text-decoration: underline;
-  text-underline-offset: 1px;
+  margin-top: 30px;
 }
+.lots__look-more-link {
+    text-decoration: underline;
+    text-decoration-thickness: 0.5px; 
+    text-underline-offset: 5px; 
+  }
 
 /*---------------About------------------------------------*/
 .about {
-  margin: 149px auto;
+  margin: 119px auto;
   width: 1052px;
   
 }
@@ -229,7 +227,7 @@ body {
 .about__column {
   display: grid;
   grid-template-columns: 334px 694px;
-  grid-template-rows: 595px;
+  
 }
 
 .first__column {
@@ -252,7 +250,7 @@ body {
 .about__text {
   margin: 5px 0px 0 25px;
   width: 693px;
-  min-height: 312px;
+ 
   display: flex;
   flex-direction: column;
   gap: 24px;
@@ -264,9 +262,7 @@ body {
 .footer {
   padding: 1px 50px 82px 50px;
   margin-top: 180px;
-
-  width: 1100px;
-  min-height: 180px;
+   width: 1100px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -275,7 +271,6 @@ body {
 .foo__menu {
   font: normal 400 18px/1;
   width: 264px;
-  min-height: 98px;
   margin-top: 3px;
 }
 .foo__list {
@@ -297,7 +292,7 @@ body {
   list-style: none;
 }
 .foo__link {
-  word-spacing: -1px;
+  
   text-decoration: underline;
   text-underline-offset: 3px;
 }
@@ -312,5 +307,5 @@ body {
 }
 .fooss {
   margin-top: 2px;
-  min-height: 98px;
+  
 }
