--- a/styles/style.css
+++ b/styles/style.css
@@ -253,7 +253,7 @@ body {
 
 .about__column {
   display: grid;
-  grid-template-columns: 334px auto;
+  grid-template-columns: 334px 1fr;
 }
 
 .logo__column {
@@ -275,7 +275,6 @@ body {
   width: 693px;
   display: flex;
   flex-direction: column;
-  /* ЕБЕМСЯ ТУТУ */
   font: var(--font-normalot);
   white-space: pre;
 }
@@ -284,7 +283,7 @@ body {
 
 .footer {
   padding: 0px 50px 82px 50px;
-  margin-top: 180px;
+  margin-top: 155px;
   width: 1100px;
   display: flex;
   flex-direction: row;
